--- a/src/components/sections/about.astro
+++ b/src/components/sections/about.astro
@@ -2,11 +2,11 @@
 import { Card, CardContent } from '@/components/ui/card';
 import { basics } from '@shared/cv';
 import { Mail, MapPin, Phone } from 'lucide-react';
-import { AnimatedSection } from './section';
-import { SectionTitle } from '@/components/sections/section-title';
+import  Section  from './section.astro';
+import  SectionTitle  from './section-title.astro';
 ---
 
-<AnimatedSection id='about'>
+<Section id='about'>
   <SectionTitle title='About Me' />
   <div class='grid gap-8 lg:grid-cols-2'>
     <Card className='overflow-hidden'>
@@ -82,4 +82,4 @@ import { SectionTitle } from '@/components/sections/section-title';
       </CardContent>
     </Card>
   </div>
-</AnimatedSection>
+</Section>
