--- a/src/components/sections/contact.astro
+++ b/src/components/sections/contact.astro
@@ -8,19 +8,12 @@ import {
   CardTitle,
 } from '@ui/card';
 import { Github, Linkedin, Mail, MapPin, Phone } from 'lucide-react';
-import { AnimatedSection } from './section';
+import Section from './section.astro';
+import SectionTitle from './section-title.astro';
 ---
 
-<AnimatedSection id='contact'>
-  <div class='space-y-4 text-center'>
-    <h2 class='font-bold text-3xl tracking-tight sm:text-4xl'>
-      Get In Touch
-    </h2>
-    <div class='mx-auto h-1 w-20 rounded-full bg-primary'></div>
-    <p class='mx-auto max-w-2xl text-muted-foreground'>
-      Have a project in mind or want to collaborate? Feel free to reach out!
-    </p>
-  </div>
+<Section id='contact'>
+  <SectionTitle title='Get In Touch' desc='Have a project in mind or want to collaborate? Feel free to reach out!' />
 
   <div class='grid gap-8 lg:grid-cols-2'>
     <Card>
@@ -99,4 +92,5 @@ import { AnimatedSection } from './section';
       </CardContent>
     </Card>
     <ContactForm client:visible />
-</AnimatedSection>
+  </div>
+</Section>
