--- a/src/components/sections/hero.astro
+++ b/src/components/sections/hero.astro
@@ -1,14 +1,11 @@
 ---
 import { Link } from '@ui/link';
 import { AlbumIcon, Github, Instagram, Linkedin } from 'lucide-react';
-import { AnimatedSection } from './section';
+import Section from './section.astro';
 import { Image } from 'astro:assets';
 ---
 
-<AnimatedSection
-  id='home'
-  className='flex min-h-screen flex-col justify-center pt-16'
->
+<Section id='home' className='flex min-h-screen flex-col justify-center pt-16'>
   <div class='grid items-center gap-8 lg:grid-cols-2'>
     <div
       class='motion-preset-slide-right-lg motion-duration-700 motion-delay-500 motion-ease-bounce space-y-6'
@@ -33,8 +30,18 @@ import { Image } from 'astro:assets';
         applications in .NET, Next.js, and Dynamics 365.
       </p>
       <div class='flex flex-wrap gap-4'>
-        <Link href='#contact' size='lg' className='bg-transparent text-foreground'>Get in touch</Link>
-        <Link href='#projects' size='lg' className='bg-transparent text-foreground'>View projects</Link>
+        <Link
+          href='#contact'
+          size='lg'
+          variant='link'
+          className='bg-transparent text-foreground'>Get in touch</Link
+        >
+        <Link
+          href='#projects'
+          size='lg'
+          variant='link'
+          className='bg-transparent text-foreground'>View projects</Link
+        >
       </div>
       <div class='flex gap-4'>
         <Link
@@ -99,4 +106,4 @@ import { Image } from 'astro:assets';
       </div>
     </div>
   </div>
-</AnimatedSection>
+</Section>
