refactor: improve link alignment and structure in blog layout

--- a/src/layouts/blog.astro
+++ b/src/layouts/blog.astro
@@ -45,9 +45,9 @@ const defaultDescription =
           />
         </div>
         <div class='flex-col gap-6 space-y-4 mb-5'>
-          <Link variant='ghost' className='flex items-baseline' href='/blog'>
+          <Link variant='ghost' className='flex items-center justify-start' href='/blog'>
             <ArrowLeft className='mr-2 h-4 w-4 text-primary' />
-              <span class='hidden sm:block'>Back to all posts</span>
+            <span class='hidden sm:block'>Back to all posts</span>
           </Link>
           <h1
             class='font-bold text-3xl tracking-tight sm:text-4xl scroll-m-28'
