--- a/src/components/sections/hero.astro
+++ b/src/components/sections/hero.astro
@@ -14,9 +14,9 @@ import { Image } from 'astro:assets';
         <h1
           class='font-bold text-4xl tracking-tight sm:text-5xl md:text-6xl lg:text-7xl'
         >
-          <span class='block'>Hi, I&apos;m</span>
+          <span class='block leading-tight'>Hi, I&apos;m</span>
           <span
-            class='block bg-gradient-to-r from-primary to-purple-600 bg-clip-text text-transparent'
+            class='block bg-gradient-to-r from-primary to-purple-600 bg-clip-text text-transparent leading-tight'
           >
             Angel Gabriel Lopez
           </span>
