--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -19,26 +19,42 @@ import { Toaster } from 'sonner';
 </html>
 <script is:inline>
   const getThemePreference = () => {
-    if (typeof localStorage !== 'undefined' && localStorage.getItem('theme')) {
-      return localStorage.getItem('theme');
+    
+    if (typeof localStorage !== 'undefined') {
+      const storedTheme = localStorage.getItem('theme');
+      if (storedTheme) return storedTheme;
     }
-    return window.matchMedia('(prefers-color-scheme: dark)').matches
-      ? 'dark'
-      : 'light';
-  };
-  const isDark = getThemePreference() === 'dark';
-  document.documentElement.classList[isDark ? 'add' : 'remove']('dark');
 
-  if (typeof localStorage !== 'undefined') {
-    const observer = new MutationObserver(() => {
-      const isDark = document.documentElement.classList.contains('dark');
-      localStorage.setItem('theme', isDark ? 'dark' : 'light');
-    });
-    observer.observe(document.documentElement, {
-      attributes: true,
-      attributeFilter: ['class'],
-    });
-  }
+    const prefersDarkMode = window.matchMedia(
+      '(prefers-color-scheme: dark)'
+    ).matches;
+    if (typeof localStorage !== 'undefined') {
+      localStorage.setItem('theme', prefersDarkMode ? 'dark' : 'light');
+    }
+    return prefersDarkMode ? 'dark' : 'light';
+  };
+
+  const applyThemeClass = (isDark) => {
+    document.documentElement.classList.toggle('dark', isDark);
+  };
+
+  const initializeTheme = () => {
+    const isDark = getThemePreference() === 'dark';
+    applyThemeClass(isDark);
+
+    if (typeof localStorage !== 'undefined') {
+      const observer = new MutationObserver(() => {
+        const isDark = document.documentElement.classList.contains('dark');
+        localStorage.setItem('theme', isDark ? 'dark' : 'light');
+      });
+      observer.observe(document.documentElement, {
+        attributes: true,
+        attributeFilter: ['class'],
+      });
+    }
+  };
+
+  initializeTheme();
 </script>
 <script is:inline>
   function applyTheme() {
