--- a/src/components/sections/projects.astro
+++ b/src/components/sections/projects.astro
@@ -11,14 +11,26 @@ import { projects } from '@shared/cv';
     title='Featured Projects'
     desc='A selection of my recent work and personal projects.'
   />
-
-  <div class='grid grid-cols-2 gap-3 lg:grid-cols-3'>
-    {
-      projects
+  <div
+      class='grid auto-rows-fr grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3'
+    >
+      {
+        projects
         .filter((project) => project.img)
-        .map((project) => <ProjectCard project={project} />)
-    }
-  </div>
+        .map((project, index) => (
+          <div
+            class:list={[
+              'transition-all duration-500 hover:z-10',
+              index % 5 === 0 && 'sm:col-span-2 sm:row-span-1',
+              index % 7 === 0 && 'lg:col-span-2 lg:row-span-1',
+              index % 3 === 0 && 'md:col-span-2 md:row-span-1',
+            ]}
+          >
+            <ProjectCard project={project} />
+          </div>
+        ))
+      }
+    </div>
 
   <div class='text-center'>
     <Button asChild variant='outline'>
