--- a/src/layouts/blog.astro
+++ b/src/layouts/blog.astro
@@ -45,7 +45,7 @@ const defaultDescription =
           />
         </div>
         <div class='flex-col gap-6 space-y-4 mb-5'>
-          <Link variant='ghost' className='flex items-center justify-start' href='/blog'>
+          <Link variant='link' className='flex items-center justify-start' href='/blog'>
             <ArrowLeft className='mr-2 h-4 w-4 text-primary' />
             <span class='hidden sm:block'>Back to all posts</span>
           </Link>
