refactor: update image file extensions in CV and enhance navbar accessibility

--- a/src/components/pages/navbar.astro
+++ b/src/components/pages/navbar.astro
@@ -24,6 +24,7 @@ const navLinks = [
       class='bg-gradient-to-r from-primary to-purple-600 bg-clip-text font-bold text-transparent text-xl'
     >
       <Logo class='h-6 text-foreground' />
+      <span class='sr-only'>Angel Gabriel Lopez</span>
     </a>
 
     <div class='group'>
