--- a/src/components/project-card.astro
+++ b/src/components/project-card.astro
@@ -13,9 +13,7 @@ const { project } = Astro.props;
 ---
 
 <Card
-  className={cn(
-    'group flex h-full flex-col overflow-hidden relative bg-card hover:shadow-lg transition-shadow duration-300 hover:shadow-card/80  '
-  )}
+  className='group flex h-full flex-col overflow-hidden relative bg-card hover:shadow-lg transition-all duration-300 hover:shadow-card/80 has-[[project-image]]:hover:[&>[data-slot="card-content"]]:opacity-0'
   data-project-card
 >
   <canvas class='absolute inset-0 -z-10 h-full w-full'></canvas>
@@ -40,7 +38,17 @@ const { project } = Astro.props;
       }
     </CardTitle>
   </CardHeader>
-  <CardContent className='flex-grow relative z-10'>
+  {
+    project.img && (
+      <div class='absolute inset-0 overflow-hidden hidden group-hover:block' project-image>
+        <div
+          class='absolute inset-0 bg-cover bg-center opacity-70 transition-transform duration-700 group-hover:scale-110 group-hover:opacity-50'
+          style={{ backgroundImage: `url(${project.img})` }}
+        />
+      </div>
+    )
+  }
+  <CardContent className='flex-grow relative z-10 '>
     <p class='mb-4 line-clamp-3 text-muted-foreground'>
       {project.description}
     </p>
