refactor: remove unused 'remark' dependency and optimize component imports

--- a/src/components/pages/navbar.astro
+++ b/src/components/pages/navbar.astro
@@ -16,14 +16,14 @@ const navLinks = [
 
 <header
   landing-header
-  class='fixed top-0 right-0 left-0 z-50 py-4 transition-all duration-300 bg-background'
+  class='fixed top-0 right-0 left-0 z-50  transition-all duration-300 bg-background'
 >
   <div class='container mx-auto flex items-center justify-between px-4'>
     <a
       href='/'
       class='bg-gradient-to-r from-primary to-purple-600 bg-clip-text font-bold text-transparent text-xl'
     >
-      <Logo class='h-6 text-foreground' />
+      <Logo className='mr-2 -ml-1' />
       <span class='sr-only'>Angel Gabriel Lopez</span>
     </a>
 
