--- a/src/components/pages/navbar.astro
+++ b/src/components/pages/navbar.astro
@@ -16,7 +16,7 @@ const navLinks = [
 
 <header
   landing-header
-  class='fixed top-0 right-0 left-0 z-50  transition-all duration-300 bg-background'
+  class='fixed top-0 right-0 left-0 z-50  transition-all duration-300 bg-background container mx-auto'
 >
   <div class='container mx-auto flex items-center justify-between px-4'>
     <a
@@ -51,7 +51,7 @@ const navLinks = [
 
       {/* Mobile Dropdown Menu */}
       <div
-        class='fixed inset-0 top-16 z-40 bg-background p-4 hidden group-has-[:checked]:block'
+        class='fixed inset-0 top-10 z-40 bg-background p-4 hidden group-has-[:checked]:block'
       >
         <nav class='flex flex-col gap-4' aria-label='Main Navigation' mobile-nav>
           {
