chore: update dependencies and improve file permissions
- Updated dependencies in package.json:
  - "@astrojs/mdx" from "4.3.0" to "4.3.9"
  - "@astrojs/react" from "4.3.0" to "4.4.1"
  - "@astrojs/vercel" from "8.2.2" to "9.0.0"
  - "astro" from "5.11.1" to "5.15.3"

- Changed file permissions for multiple files to 755 for better execution rights.
- Added new hexagon component for enhanced UI.
- Introduced json-terminal component for better JSON display.

--- a/src/layouts/layout.astro
+++ b/src/layouts/layout.astro
@@ -1,5 +1,7 @@
 ---
 const { content } = Astro.props;
+
+import Hexagon from "@components/hex.astro";
 import Footer from "@components/pages/footer.astro";
 import Head from "@components/pages/head.astro";
 import Navbar from "@components/pages/navbar.astro";
@@ -10,10 +12,12 @@ import { Toaster } from "sonner";
   <Head content={content} />
   <body class="bg-background text-foreground antialiased">
     <main class="min-h-screen flex flex-col">
-      <Navbar />
-      <slot />
-      <Footer />
-      <Toaster position="top-center" closeButton richColors client:idle />
+      <!-- <Hexagon> -->
+        <Navbar />
+        <slot />
+        <Footer />
+        <Toaster position="top-center" closeButton richColors client:idle />
+      <!-- </Hexagon> -->
     </main>
   </body>
 </html>
